feat: Add x and y in CampaignActor core. Add speed limit tests.